# cppProjectTemplate

./: .config  .gitignore  CMakeLists.txt  README.md  a.bat  b.bat  b.sh  c.bat  d.bat  p.bat  r.bat  requirements.txt  test.bat  test.sh
script/: manage.py
src/: Hello.cpp  Hello.h
test/: .config  CMakeLists.txt
test/src/: main.cpp
tools/: pm.py
